# VieHub-Main

./: CHANGELOG.md  CONTRIBUTION.md  README.md  app.json  package-lock.json
client/: .env.example  .eslintrc.cjs  CONTRIBUTION.md  Dockerfile  Procfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  firebase-config.tsx  main.tsx
client/src/api/: apiClient.ts  supabase.tsx
client/src/components/: Button.tsx  Dropdown.tsx  Searchbar.tsx  Taps.tsx  TextInput.tsx
client/src/config/: BrowserRouter.tsx  history.tsx
client/src/constants/: index.tsx  signupData.tsx
client/src/contexts/: AuthContext.tsx
client/src/hoc/: withAuth.tsx
client/src/hooks/: AuthContext.tsx  AuthProvider.tsx  Context.tsx  useCreateContest.ts  useGetContest.ts  useUserData.ts
client/src/routes/: AuthRoutes.tsx  PrivateRoutes.tsx  PublicRoutes.tsx
client/src/store/: authSlice.tsx  store.tsx
client/src/styles/: ContestDetails.css  ContestForm.css  ContestForm2.css  Header.css  Login.css  PublicAndPrivateHost.css  Select_h_p.css  Submission.css  cards.css  contest.css  host.css  index.css  payment.css  profile.css  (+1 more)
server/: .env.example  .gitignore  Procfile  README.md  app.json  pyproject.toml
server/middleware/: auth_middleware.py
server/scripts/: README.md  index.py
server/src/: main.py
server/src/middlewares/: authentication.py
server/src/routes/: contests.py  index.py  privatecontests.py  users.py  workflows.py
server/src/services/: Agent.py  PreviewAgent.py  SummaryAgent.py
server/tests/: test.py
(+71 files in other folders)
