[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ahmed14z <ahmedeslam1582002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
requests = "^2.29"
firebase-admin = "^6.5.0"
pyrebase4 = "^4.7.1"


[tool.pyright]
include = ["main.py"]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "scripts.index:lint"
lint_fix = "scripts.index:lint_fix"
start = "scripts.index:start"
test = "scripts.index:test"
tests = "scripts.index:tests"